fix: changed links of repos to kb pages if present

--- a/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
@@ -21,26 +21,26 @@ Based on the [criteria](https://doi.org/10.3897/rio.6.e55852) chosen by Task Are
 
 ## Core Repositories
 
--   [Chemotion Repository](https://www.chemotion-repository.net/)<br/>Field-specific sample and reaction-centric repository including analysis data such as NMR, UV-VIS, IR, and MS data.
--   [MassBank EU](https://massbank.eu/MassBank/)\*<br/>Field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
--   [nmrXiv](https://docs.nmrxiv.org/)<br/>Field-specific repository for NMR data.
--   [RADAR4Chem](https://radar4chem.radar-service.eu/)<br/>Generic, multidisciplinary repository that offers a free and reliable home for all chemical research data that do not fulfil the specifications of field-specific repositories.
--   [STRENDA DB](https://www.beilstein-strenda-db.org/)<br/>Field-specific repository for enzymology data, which incorporates the STRENDA Guidelines for reporting enzymology data.
--   [SUPRABANK](https://suprabank.org/)<br/>Field-specific repository for intermolecular interactions data.
+-   [Chemotion Repository](/docs/chemotion_repository)<br/>Field-specific sample and reaction-centric repository including analysis data such as NMR, UV-VIS, IR, and MS data.
+-   [MassBank EU](/docs/massbank_eu/)\*<br/>Field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
+-   [nmrXiv](/docs/nmrxiv/)<br/>Field-specific repository for NMR data.
+-   [RADAR4Chem](/docs/radar4chem/)<br/>Generic, multidisciplinary repository that offers a free and reliable home for all chemical research data that do not fulfil the specifications of field-specific repositories.
+-   [STRENDA DB](/docs/strenda_db/)<br/>Field-specific repository for enzymology data, which incorporates the STRENDA Guidelines for reporting enzymology data.
+-   [SUPRABANK](/docs/suprabank/)<br/>Field-specific repository for intermolecular interactions data.
 
 \*Resource which does not accept direct submission of MS data in vendor or mzML format, but data in MassBank format, see [RMassBank](https://bioconductor.org/packages/release/bioc/html/RMassBank.html).
 
 ## Associated repositories
 
--   [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/solutions/software/webcsd/)\*<br/>Field-specific repository for x-ray diffraction data of molecules generally containing at least carbon and hydrogen, operated by the Cambridge Crystallographic Data Centre (CCDC).
--   [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/)\*<br/>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals, intermetallic phases and ionic solids, operated by FIZ Karlsruhe.
--   [Joint CCDC/FIZ Access Structures Service](https://www.ccdc.cam.ac.uk/structures/)<br/>Service that provides open access to the CSD Structure Depot, but not to all CSD data.
+-   [Cambridge Structural Database](/docs/csd_icsd/)\*<br/>Field-specific repository for x-ray diffraction data of molecules generally containing at least carbon and hydrogen, operated by the Cambridge Crystallographic Data Centre (CCDC).
+-   [Inorganic Crystal Structure Database](/docs/csd_icsd/)\*<br/>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals, intermetallic phases and ionic solids, operated by FIZ Karlsruhe.
+-   [Joint CCDC/FIZ Access Structures Service](/docs/csd_icsd/)<br/>Service that provides open access to the CSD Structure Depot, but not to all CSD data.
 
 \*Resource for which a license agreement is required.
 
 ## Further Repositories
 
--   [NOMAD](https://nomad-lab.eu/)<br/>Field-specific repository for computational materials science data.
+-   [NOMAD](/docs/nomad/)<br/>Field-specific repository for computational materials science data.
 -   [ioChem-BD](https://www.iochem-bd.org/)<br/>Field-specific repository for computational chemistry data.
 -   [RADAR](https://www.radar-service.eu/radar/en/home)\*<br/>Generic, multidisciplinary repository for all types of chemical research data that do not meet the specifications of any field-specific repository.
 -   [Zenodo](https://zenodo.org/)<br/>Generic repository developed under the European OpenAIRE program, operated by CERN.
