--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -60,22 +60,25 @@ Herausforderungen (Challenges)
 
 ## Introduction 
 
-Physical Chemistry encompasses a variety of sub-disciplines, covering vast methodology, which, in turn produce heterogenous data. 
+Physical Chemistry encompasses a variety of sub-disciplines, covering vast methodology, which, in turn, produce heterogenous data. 
 From spectroscopic measurement data, imaging, to simulation input files and in-house data analysis code, many physical chemists are experienced in handling digital data. They are often well-versed in developing software solutions to support their work. While some work with large data volumes on a regular basis, other methodologies result in small, text-based files. This discipline includes many data-literate members, the expertise of which may be harnessed to implement tools and solutions to manage their research group's data in a unified and streamlined manner. 
 
-## Data Types 
+## What Type of Data?
 
-As mentioned, the data produced in physical chemistry and its diverse sub-disciples are varied. One research group may work intensively with imaging data such as superresolution microscopy, while the other may work on method development, and again others may analyze spectroscopic data or conduct numeric simulations—or even any combination of these. The table below provides and overview of typical methods employed along with their data types and recommended formats.
+As mentioned, the data produced in physical chemistry and its diverse sub-disciples are varied. One research group may work intensively with imaging data such as superresolution microscopy, while the other may work on method development, and again others may analyze spectroscopic data or conduct numeric simulations—or even any combination of these. The table below provides an overview of typical methods employed along with their data types and recommended formats.
+
+
+
 <!-- should the above be more specific? --->
 
 ### Methods Data Format Overview
-<!--need to update table-->
+<!--are we still doing this table at all?-->
 
 <Methods defaultProfile={"physical"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.:::
 
-## ELNs and Other Tools
+## What ELNs/Tools?
 
 For effective data management, software tools should be selected in a uniform manner within a project or research group with the aim to [organize](docs/data_organisation) and streamline workflows. This involves establishing clear usage guidelines, including metadata templates drawn from minimum information standards for a given method, where available. These should be outlined in a [data management plan (DMP)](docs/dmp) for each project. Many universities supply tools and templates for DMPs (see the [respective article](doc/dmp) for more information).
 
@@ -88,7 +91,7 @@ For those writing scripts and developing research software solutions, git is a h
 Specifically for research data, [DataLad](https://www.datalad.org/), which is built on top of git, can greatly assist in tracking the metadata while processing and analyzing data. While it works for steps carried out with GUI applications, its true power comes in handy for those using script-based analysis and processing steps.
 <!--should extend the table to show which tools (and repos) support which file types-->
 
-## Publishing Data
+## How and where can data be published?
 
 [Publishing research data](docs/data_publication), especially that underlying a published article, is an important aspect that allows others in the research community to replicate and build upon a researchers work. [Research data repositories](docs/repositories) serve as platforms for data publication and can greatly assist in [FAIR](docs/fair) data publication. Such repositories range from subject-specific to general and institutional. For many in physical chemistry and its varied data, general repositories such as [RADAR4Chem](https://radar.products.fiz-karlsruhe.de/de/radarabout/radar4chem) presents an option for publishing data for which now (sub-)discipline-specific repository has been established. [ioChem-BD](https://www.iochem-bd.org/) serves as a computational chemistry repository and includes a conversion service for many common data types to ensure interoperability. The [Image Data Resource (IDR)](https://idr.openmicroscopy.org/) makes biological imaging data available to the community, while self-hosted Omero repositoy can assist those working with other types of imaging data (a public non-biology version of the IDR is not yet available). <!--Nikki: as far as I know--> For more information on choices, head [here](docs/choose_repository).
 
