feat: clickable repo decision tree

--- a/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
@@ -4,6 +4,7 @@ slug: "/choose_repository"
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
+import DecisionTree from "@site/src/components/DecisionTree";
 
 # Choose a Repository
 
@@ -11,7 +12,7 @@ The NFDI4Chem aims to support researchers in collecting, storing, processing, an
 
 This decision tree will guide users to quickly select a suitable repository for publishing their research data!
 
-![Choose a Repository - Decision Tree](/img/data_pub/Repo_decision_tree_v2.svg)
+<DecisionTree />
 
 :::danger Notice:
 Choosing the most appropriate repository can make data easier to find and cite. Field-specific repositories should be the first choice as these repositories enhance the FAIRness of specific types of chemistry data on behalf of the submitters. To retain the same level of FAIRness, data publishing in generic, multidisciplinary repositories requires manual, time-consuming and labour-intensive FAIRification.
