chore: component directory structure

--- a/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
@@ -4,13 +4,13 @@ slug: "/choose_repository"
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
-import DecisionTree from "@site/src/components/DecisionTree";
+import DecisionTree from "@site/src/components/repos/DecisionTree";
 
 # Choose a Repository
 
 The NFDI4Chem aims to support researchers in collecting, storing, processing, analysing, publishing, and reusing research data. Based on the [NFDI4Chem Community Survey](https://doi.org/10.1002/zaac.202000339), a list of the most [common data types and formats](/docs/pub_data_types_formats) of the community has been compiled to suggests suitable trusted chemistry-friendly repositories.
 
-This decision tree will guide users to quickly select a suitable repository for publishing their research data!
+This decision tree will guide users to quickly select a suitable repository for publishing their research data. Click on the repositories to learn more!
 
 <DecisionTree />
 
