refactor: styling of repo pages

--- a/docs/50_data_publication/20_choose_repository/40_massbank_eu.mdx
+++ b/docs/50_data_publication/20_choose_repository/40_massbank_eu.mdx
@@ -3,22 +3,30 @@ title: "MassBank EU"
 slug: "/massbank_eu"
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
+import RepoButton from "@site/src/components/repos/RepoButton";
 
-# MassBank EU – High Quality Mass Spectrometry Reference Database
+_High Quality Mass Spectrometry Reference Database_
 
-:::info Note:
-Link to [MassBank EU](https://massbank.eu/) and [RMassBank](https://bioconductor.org/packages/release/bioc/html/RMassBank.html), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.dk451a), Link to [re3data](http://doi.org/10.17616/R3K05Z).
-:::
+<RepoButton url="https://massbank.eu/" intro="Link to" name="MassBank EU" />
+<RepoButton
+    url="https://doi.org/10.25504/FAIRsharing.dk451a"
+    intro="Entry on"
+    name="FAIRsharing"
+/>
+<RepoButton
+    url="http://doi.org/10.17616/R3K05Z"
+    intro="Entry on"
+    name="re3data"
+/>
 
-## Quick facts
+:::info Quick facts
 
 -   **Accepted data types:** MassBank format, see [RMassBank](https://bioconductor.org/packages/release/bioc/html/RMassBank.html).
 -   **Used standards/ontologies:** [MassBank Record Format](https://github.com/MassBank/MassBank-web/blob/main/Documentation/MassBankRecordFormat.md)
 -   **Data deposition condition:** open
 -   **Recommended by Journals/Societies:** Official database of the [Mass Spectrometry Society of Japan](https://www.mssj.jp/index_en.html)
 
-## Details
+:::
 
 MassBank EU is a **field-specific** and the first public repository of **mass spectrometry reference spectra**. Their target user groups in the domains of **chemistry** and **life sciences** are analytical chemists, metabolomics, biochemists, and bioinformaticians. Datasets from community users and projects are **openly accessible** and represent the official database of the [Mass Spectroscopy Society of Japan](https://www.mssj.jp/index_en.html).
 
