--- a/docs/50_data_publication/20_choose_repository/70_strenda_db.mdx
+++ b/docs/50_data_publication/20_choose_repository/70_strenda_db.mdx
@@ -3,22 +3,34 @@ title: "Strenda DB"
 slug: "/strenda_db"
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
+import RepoButton from "@site/src/components/repos/RepoButton";
 
-# STRENDA DB – Repository for Reporting Enzymology Data
+_Repository for Reporting Enzymology Data_
 
-:::info Note:
-Link to [STRENDA DB](https://www.beilstein-strenda-db.org/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.ekj9zx), Link to [re3data](http://doi.org/10.17616/R3536N).
-:::
+<RepoButton
+    url="https://www.beilstein-strenda-db.org/"
+    intro="Link to"
+    name="STRENDA DB"
+/>
+<RepoButton
+    url="https://doi.org/10.25504/FAIRsharing.ekj9zx"
+    intro="Entry on"
+    name="FAIRsharing"
+/>
+<RepoButton
+    url="http://doi.org/10.17616/R3536N"
+    intro="Entry on"
+    name="re3data"
+/>
 
-## Quick facts
+:::info Quick facts
 
 -   **Accepted data types:** Currently none, EnzymeML (in development)
 -   **Used standards/ontologies:** DataCite, InChI, [EnzymeML (in development)](https://enzymeml.org/)
 -   **Data deposition condition:** open
 -   **Recommended by Journals/Societies:** [Archives in Biochemistry and Biophysics](https://www.sciencedirect.com/journal/archives-of-biochemistry-and-biophysics), [Beilstein Journal of Organic Chemistry](https://www.beilstein-journals.org/bjoc/home), [eLife](https://elifesciences.org/), [Molecular Catalysis](https://www.sciencedirect.com/journal/molecular-catalysis), [Nature](https://www.nature.com/) (including Biotechnology, Chemistry, Microbiology, Pharmacology, Systems Biology), [PLoS](https://plos.org/) (relevant journals, e.g. One, Biology, Computational Biology, Medicine), [Scientific Data](https://www.nature.com/sdata/), [The Journal of Biological Chemistry](https://www.jbc.org/), recommended by [Angewandte Chemie](https://onlinelibrary.wiley.com/page/journal/15213773/homepage/notice-to-authors#sectFDataDeposition) and further Wiley journals.
 
-## Details
+:::
 
 STRENDA DB is a **field-specific** repository for **enzymology** data operated since 2016 and hosted at Beilstein Institute (BI) Frankfurt. It ensures that datasets are complete and valid before scientists submit them as part of a publication. Their target audience is biochemists, systems biologists, biocatalysts in the fields of life sciences, biological, molecular, and food chemists. The typical data contained in this repository consists of **functional enzymology data** (kinetic and experimental data) from manuscripts and publications. Data entered in the STRENDA DB are automatically checked (according to STRENDA Guidelines and a PDF fact sheet with submittable input data), allowing users to receive notifications for necessary but missing information. Currently, more than [55 international biochemistry journals](https://www.beilstein-institut.de/en/projects/strenda/journals/) already include the STRENDA guidelines in their instructions for authors. **DOI** is used as the identification system for citations and ORCID iD as the identification system for authors. Data viewing is possible via open access and data contribution is possible after a required registration where the current **AAI** is provided through an internal user administration (user, administrator).
 
