--- a/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
+++ b/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
@@ -1,11 +1,23 @@
 ---
-title: "CSD/ICSD"
+title: "CSD / ICSD"
 slug: "/csd_icsd"
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
+import RepoButton from "@site/src/components/repos/RepoButton";
 
-# CSD, ICSD – Joint CCDC/FIZ access structures service
+_Joint CCDC/FIZ access structures service_
+
+<RepoButton
+    url="https://www.ccdc.cam.ac.uk/solutions/software/webcsd/"
+    intro="Link to"
+    name="CSD"
+/>
+<RepoButton url="https://icsd.fiz-karlsruhe.de/" intro="Link to" name="ICSD" />
+<RepoButton
+    url="https://www.ccdc.cam.ac.uk/structures/"
+    intro="Link to"
+    name="Joint CCDC/FIZ Access Structures Service"
+/>
 
 :::info Note:
 Link to [CSD](https://www.ccdc.cam.ac.uk/solutions/software/webcsd/) (requires license) [ICSD](https://icsd.fiz-karlsruhe.de/) (requires license) and [Joint CCDC/FIZ Access Structure](https://www.ccdc.cam.ac.uk/structures/) that provides open access to the CSD Structure Depot, but not all CSD data.
