feat: added molecular to decision tree js for csd

--- a/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
+++ b/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
@@ -41,7 +41,7 @@ Link to [re3data](http://doi.org/10.17616/R3GW2V)
 
 ## CSD, ICSD and joint CCDC/FIZ Access Structures Service
 
-The [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/) (ICSD) provided by [FIZ Karlsruhe](https://www.fiz-karlsruhe.de/) is the world's largest database of completely identified **inorganic crystal structures**. It contains over 260,000 datasets. Complimentarily, the CCDC provides the [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/solutions/software/webcsd/) (CSD), a [certified trusted](https://www.coretrustseal.org) database of fully curated and enhanced **organic** and **metal-organic crystal structures**. First established over fifty years ago it now contains over **one million** entries. ICSD and CSD support scientists in the field of crystallography, chemistry, material science, physics and structural biology. The [joint CCDC/FIZ Access Structures Service](https://www.ccdc.cam.ac.uk/structures/), launched in 2018, serves to deposit, register, and preserve structure data of inorganic crystalline compounds at **no charge**. Crystal structures mentioned in scientific publications are stored in the crystal structure depot. Upon deposition, each dataset is assigned a Digital Object Identifier (**DOI**) so that the crystal structure is unambiguously identified and registered. The DOI enables third parties to cite and reference data according to the rules of good scientific practice.
+The [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/) (ICSD) provided by [FIZ Karlsruhe](https://www.fiz-karlsruhe.de/) is the world's largest database of completely identified **inorganic crystal structures**. It contains over 260,000 datasets. Complimentarily, the CCDC provides the [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/solutions/software/webcsd/) (CSD), a [certified trusted](https://www.coretrustseal.org) database of fully curated and enhanced **organic** and XXX **metal-organic crystal structures**. First established over fifty years ago it now contains over **one million** entries. ICSD and CSD support scientists in the field of crystallography, chemistry, material science, physics and structural biology. The [joint CCDC/FIZ Access Structures Service](https://www.ccdc.cam.ac.uk/structures/), launched in 2018, serves to deposit, register, and preserve structure data of inorganic crystalline compounds at **no charge**. Crystal structures mentioned in scientific publications are stored in the crystal structure depot. Upon deposition, each dataset is assigned a Digital Object Identifier (**DOI**) so that the crystal structure is unambiguously identified and registered. The DOI enables third parties to cite and reference data according to the rules of good scientific practice.
 
 Both institutions are world-leading experts in structural data and their combined databases contain every published organic, metal-organic, and inorganic crystal structure and are essential resources for the structural chemistry community. Each dataset has to pass rigorous quality checks with manual curation performed by scientific experts. These rich, high-quality data resources alongside advanced software provided by the two institutions enable scientists from industry and academia to extract new insights from the data and discover novel scientific trends. Researchers in structural chemistry rely on the data, it is relevant to industry, and used to teach chemistry concepts to new generations of scientists. Collectively, the licensed databases are installed in over 1,300 institutions worldwide.
 
