--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -3,8 +3,7 @@ title: "Publishing Standards"
 slug: "/publishing_standards"
 ---
 
-<!--Note: see collection of standards: https://docs.google.com/document/d/1hcQb3A41twrY3mt5vF_axm5AQr2tdDsRnOjnQfw-rSo/edit?usp=sharing-->
-
+<!--Streamline article submission and review process with datasets attached.-->
 
 ![Under Construction](/img/Constr_2bl.png)
 
@@ -15,6 +14,9 @@ This page is under construction, while you are welcome to read the already exist
 ## For Authors
 
 ### How to use dataset PIDs in scientific articles
+
+<!--Standard on how to publish NMR data, tbd-->
+
 
 During deposition of research data, a [persistent identifier (PID)](/docs/pid) is assigned to the data. Authors should use PIDs in their article for interlinking in two main ways:
 
@@ -44,45 +46,39 @@ Many data repositories will offer the option to add a related identifier. Accord
 
 See also: [Crossref's documentation on **linking datasets** to published items](https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/relationships/)
 
-## For Research Data Repositories
-
-The below outlines a collection of standards for research data repositories. 
-
----
+## For Research Data Infrastructure and Resource Providers
 
 :::tip Standard
-*Research data repositories should provide a Collection DOI to wrap datasets corresponding to one study.*
+*Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to an article to be published.*
 :::
 
-Research data repositories may use individual DOIs to reference individual chemical reactions, molecules, or analytical datasets. Thus, many DOIs will then be relevant to the published study results. In order to facilitate the manuscript submission process, a **single DOI** that wraps all relevant data should be available. Furthermore, this ensure all data underlying a published manuscript can be viewed and referenced as a single **collection**.
-
----
-
-:::tip Standard
-*NFDI4Chem-supported research data repositories should contribute to Scholix.org (or a similar solution).*
-:::
-
-[**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects.
-
----
+Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for a whole datasets published, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
 
 :::tip Standard
 *Datasets published with an embargo period should have inaccessible data but accessible metadata.*
 :::
 
-While an **embargo** period restricts access to a published dataset, the **metadata should still be accessible**. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. 
+While an **embargo** period restricts access to a published dataset, the **metadata should be accessible**. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. Findable and accesible metadata is required to link articles and datasets, as DOIs to datasets need to be **validated** before the metadata record of articles gets updated.
 
----
-<!--Standard on how to publish NMR data, tbd-->
+:::tip Standard
+*Research data repositories should contribute to Scholix.org.*
+:::
 
+[**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing an **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects. This information is used by academic publishers to discover datasets that correspond to an article but were published after the article was published, which allows the metadata of the article to be updated with links to the dataset.
+
+:::tip Standard
+*Research data repositories should provide access to datasets under review.*
+:::
+
+In order to include datasets in the review process of manuscripts, repositories should provide access to reviewers. It is strongly encouraged that repositories provide a status *in review* beside of the statuses *draft* and *published*. **A dataset under review should not be editable but should be accessible** via an URL, while the DOI is not yet discoverable and the DOI metadata is not yet accessible as the dataset is not yet published.
 
 :::tip Standard
 *URLs to access datasets under review should have the access credentials encoded in the URL.*
 :::
 
-**Review links** for datasets should have the **access credentials** encoded in the URL, rather than having separate login and password. This avoids having to forward these details to the reviewer via the submission system. 
+**Review links** for datasets *under review* should have the **access credentials** encoded in the URL, rather than having separate login and password. This avoids having to forward these details to the reviewer via the submission system. 
 
----
+<!--
 
 :::tip Standard
 *Repositories should register a DOI and populate main fields such as creator and contributor, if a dataset is under review.*
@@ -90,79 +86,66 @@ While an **embargo** period restricts access to a published dataset, the **metad
 
 This ensures that journals may carry out automated **quality control steps upon manuscript submission**. Further details within the dataset's metadata and content may still be adjusted and updated prior to final publication.
 
----
+I commented this out, as the DOI should be registered when something gets published. One idea to address the chicken and egg problem for linking is that article DOIs get registered as soon as an manuscript is accepted. Only a minimum of metadata may be providede such as author and publisher names. Then, authors need to add the DOI of their article to the metadata of the dataset before the galleys and the dataset should get published and a DOI is registered. After the galley i.e. directly before the article gets published the academic publisher should also add the DOI of the dataset to their DOI (CrossRef) metadata and update all other metadate field with information already providede today.  
+
+-->
 
 :::tip Standard
-*Research data repositories should provide the repository name as `publisher` in a dataset's metadata.*
+*Research data repositories should provide the repository name as 'publisher' as well as a 'publisherIdentifier' in a dataset's DataCite metadata.*
 :::
 
-As stated by [**DataCite's documenation on the publisher field**](https://datacite-metadata-schema.readthedocs.io/en/4.5/properties/publisher/#publisher), this `publisher` field is used to formulate the citation of the data and thus should be the repository name. 
+DOI prefixes are specific to each registrant. As each registrant may host more than one repository, the prefix is not neccesarily specific to an individual repository. As stated by [**DataCite's documenation on the publisher field**](https://datacite-metadata-schema.readthedocs.io/en/4.5/properties/publisher/#publisher), the required `publisher` field is used to formulate the citation of the data and should therefore be the repository name. In addition, a repository identifier such as the re3data identifier should be provided to unambiguously identify the repository. Both fields should be automatically populated by the repository and should not be editable by the submitter. 
 
----
-
-:::tip Standard
-*Research data repositories should provide their repository identifier by re3data.org as a `publisherIdentifier`.*
-:::
-
-To uniquely and persistently identify themselves within the dataset's metadata, repositories should provide their **repository identifier from re3data.org**. These should be automatically populated metadata fields. If data has originally been published in another repository, the respective repository identifier should be used.
-
-In the case of RADAR4Chem the relationship would be described as follows (see also [DataCite's documenation on the publisher field](https://datacite-metadata-schema.readthedocs.io/en/4.5/properties/publisher/#publisher)):
+In the case of RADAR4Chem the relationship would be described as follows:
 
 >Publisher: RADAR4Chem
 >
->publisherIdentifier: http://doi.org/10.17616/R3ZX96
+>publisherIdentifier: http://doi.org/10.17616/R31NJNAY
 >
 >publisherIdentifierScheme: re3data 
 >
 >schemeURI: https://re3data.org/
 
+In XML:
 ```xml
-<publisher xml:lang="en" publisherIdentifier="http://doi.org/10.17616/R3ZX96" publisherIdentifierScheme="re3data" schemeURI="https://re3data.org/">RADAR4Chem</publisher>
+<publisher xml:lang="en" publisherIdentifier="http://doi.org/10.17616/R31NJNAY" publisherIdentifierScheme="re3data" schemeURI="https://re3data.org/">RADAR4Chem</publisher>
 ```
 
 This ensures humans as well as machines can trace and interpret where the data has been published.
 
----
-
 :::tip Standard
-*Research data repositories should allow researchers to update the research data's metadata.*
+*Research data repositories should allow researchers to update the metadata of datasets.*
 :::
 
-This pertains to **corrections and updates** made both to the PID metadata as well as any other metadata. For full transparency, metadata may be **versioned**. The record may indicate to viewers that changes were made. 
-
----
+As the process of adding metadata via a metadata editor can be error-prone, creators should be allowed to **correct and update** the PID metadata as well as any other metadata. For full transparency, metadata may be **versioned**. The record may indicate to viewers that changes were made. Updating of metadata contributes to [FAIR](/docs/fair) ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)) by enhancing the richness of metadata, and also allows creators to add additional related identifiers for recently published related datasets and articles. 
 
 :::tip Standard
-*Research data repositories should inform authors and data curators about possible rights conflicts for the abstract field in the DataCite schema*
+*Research data repositories should inform authors and data curators about possible rights conflicts for the abstract field in the datasets DataCite metadata.*
 :::
 
-Dataset's should have their **own description as an abstract**. Copying the related text publication abstract can results in a **rights conflict** with the respective publisher. Authors and data curators should be informed about this conflict when filling out a dataset's metadata.
-
----
+Dataset's should have their **own description as an abstract**. Copying the related article abstract can results in a **rights conflict** with the respective acedemic publisher. This is particularly the case in German law. Authors and data curators should be informed of this conflict, e.g. via a **tooltip** when adding metadata using a metadata editor.
 
 :::tip Standard
-*In research data repositories, licenses should be grouped in licenses for research data vs. licences for software.*
+*In research data repositories, licences should be grouped into research data licenses and software licenses.*
 :::
 
-**Licenses** differ for datasets and software. Thus, providing a **grouping** greatly aids authors in selecting from the correct set. 
-
----
+Repositories often tend to provide confusingly long lists of licences. Furthermore, **licenses** differ for datasets and software. Providing a **grouping** will greatly assit authors in selecting from the correct set. 
 
 :::tip Standard
-*Research data repositories should guide users to choose a creative commons license while not making the overall landscape too complicated*
+*Research data repositories should encourage researchers to choose a Creative Commons licence to simplify the landscape of licences and their choice.*
 :::
 
-In line with grouping licenses between software and datasets, pointing authors towards the selection of [**creative commons (CC)**](https://creativecommons.org/) license alleviates the selection process.  
-
----
+In line with grouping licences between software and datasets, pointing authors towards the selection of [**Creative Commons (CC)**](https://creativecommons.org/) license alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
 
 :::tip Standard
-*Research data repositories should pre-select licenses such as CC0 or CC BY 4.0 instead of more restrictive licenses such as CC BY-SA 4.0, which might highly complicate reuse.*
+*Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can make reuse very difficult.*
 :::
 
-Licenses can be confusing to authors. Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)** as opposed to more restrictive licenses such as [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) or [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/).
+Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/)** and **[CC BY](https://creativecommons.org/licenses/by/4.0/)** as opposed to more restrictive licenses such as [CC BY-SA](https://creativecommons.org/licenses/by-sa/4.0/) or even [CC BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/).
 
 ## For Publishers and Journals
+
+<!---Add Scholix!--->
 
 The below outlines a collection of standards for publishers and journals.
 
